# marzban-verify

./: .gitignore  BACKGROUND.md  README.md  pyproject.toml  requirements.txt
.github/: build-tag.yml
.github/workflows/: build-dev.yml
docker/: Dockerfile  compose.yml
marban_verify/: main.py
marzban_verify/: __init__.py  __main__.py  app.py  verify.py
marzban_verify/core/: verification_code_storage.py
marzban_verify/handlers/: handle_email.py  handle_message.py  handle_start.py  handle_verification_code.py
marzban_verify/mailers/: direct.py  exchange.py
marzban_verify/utils/: config.py  logging.py  username.py  validators.py
