[tool.poetry]
name = "marzban-verify"
version = "0.2.2"
description = ""
authors = ["aigoncharov <andrey@goncharov.page>"]
readme = "README.md"
packages = [{include = "marzban_verify"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.10"
aiosmtpd = "^1.4.6"
dnspython = "^2.7.0"
aiohttp = "^3.11.11"
exchangelib = "^5.5.0"

[tool.poetry.scripts]
marzban_verify = "marzban_verify:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"